--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,10 @@ script:
   - echo "Deploy!"
 install:
   - npm install -g firebase-tools
+  - npm install -g polymer-cli
+test:
+  - polymer test
+build:
+  - polymer build
 after_success:
   - firebase deploy --token "$FIREBASE_TOKEN"
