--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axe-cli": "^1.0.3",
     "commander": "^2.11.0",
-    "eslint": "^4.7.2",
+    "eslint": "^4.13.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-html": "^4.0.1",
     "firebase-tools": "^3.9.2",
     "webdriverio": "^4.8.0"
   },
