--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "polymerfire": "firebase/polymerfire#^2.2.1"
+    "iron-pages": "PolymerElements/iron-pages#^2.0.1",
+    "lazy-imports": "Polymer/lazy-imports#^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
