--- a/bower.json
+++ b/bower.json
@@ -4,8 +4,11 @@
   "main": "index.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
-    "polymerfire": "firebase/polymerfire#^2.2.1"
+    "polymerfire": "firebase/polymerfire#^2.2.1",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.1",
+    "paper-styles": "PolymerElements/paper-styles#^2.0.0",
     "lazy-imports": "Polymer/lazy-imports#^2.0.0"
   },
   "devDependencies": {
